started on the player invertoy and inproved the navbar

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <link rel="stylesheet" href="sport.css">
     </head>
     <body>
-        <nav>
-            <a href="/html/">HTML</a> |
-            <a href="/css/">CSS</a> |
-            <a href="/js/">JavaScript</a> |
-            <a href="/python/">Python</a>
-        </nav>
+        <div class="navbar">
+            <img id="logo" src="logobg.png" alt="logo">
+            <a href="#">Home</a> 
+            <a href="players.html">Meet the team</a> 
+            
+        </div>
     </body>
 </html>
