--- a/players.html
+++ b/players.html
@@ -8,12 +8,81 @@
 <body style="background-color:white;">
 
 <div class="navbar">
-  <img id="logo" src="logo.jpg" alt="logo">
-  <a href="#home">Home</a>
-  <a href="players.html">Our Players</a>
-  </div> 
-</div>
+  <img id="logo" src="logobg.png" alt="logo">
+  <a href="index.html">Home</a>
+  <a href="players.html">Meet the team</a>
+</div> 
 
+<div class="main">
+
+  <h1>Our players</h1>
+  <hr>
+  
+ <!-- <h2>PORTFOLIO</h2> -->
+  <h2>strikers</h2>
+  
+  <!-- Portfolio Gallery Grid -->
+  <div class="row">
+    <div class="column">
+      <div class="content">
+        <img src="player1.jpg" alt="Seyyid Atabek" id="gridimage">
+        <h3>Seyyid Atabek</h3>
+        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      </div>
+    </div>
+    <div class="column">
+      <div class="content">
+      <img src="player2.jpg" alt="Kabelo Byron" id="gridimage">
+        <h3>Kabelo Byron</h3>
+        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      </div>
+    </div>
+    <div class="column">
+      <div class="content">
+      <img src="player3.jpg" alt="Lorne Odhiambo" id="gridimage">
+        <h3>Lorne Odhiambo</h3>
+        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      </div>
+    </div>
+    <div class="column">
+      <div class="content">
+      <img src="/w3images/mountains.jpg" alt="Mountains" id="gridimage">
+        <h3>My Work</h3>
+        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      </div>
+    </div>
+  </div>
+  
+  <div class="row">
+    <div class="column">
+      <div class="content">
+        <img src="player1.jpg" alt="Seyyid Atabek" id="gridimage">
+        <h3>Seyyid Atabek</h3>
+        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      </div>
+    </div>
+    <div class="column">
+      <div class="content">
+      <img src="player2.jpg" alt="Kabelo Byron" id="gridimage">
+        <h3>Kabelo Byron</h3>
+        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      </div>
+    </div>
+    <div class="column">
+      <div class="content">
+      <img src="player3.jpg" alt="Lorne Odhiambo" id="gridimage" >
+        <h3>Lorne Odhiambo</h3>
+        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      </div>
+    </div>
+    <div class="column">
+      <div class="content">
+      <img src="/w3images/mountains.jpg" alt="Mountains" id="gridimage">
+        <h3>My Work</h3>
+        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      </div>
+    </div>
+  </div>
 
 
 </body>
