worked on player decriptions

--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
             <a href="players.html">Meet the team</a> 
             
         </div>
+        <div class="main">
+            <img src="logo.jpg" alt="arr">
+
+        </div>
     </body>
 </html>
