--- a/players.html
+++ b/players.html
@@ -46,39 +46,41 @@
     </div>
     <div class="column">
       <div class="content">
-      <img src="/w3images/mountains.jpg" alt="Mountains" id="gridimage">
-        <h3>My Work</h3>
+      <img src="player4.jpg" alt="Lucas Claud" id="gridimage">
+        <h3>Lucas Claud</h3>
         <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
       </div>
     </div>
   </div>
-  
+
+  <hr>
+
   <div class="row">
     <div class="column">
       <div class="content">
-        <img src="player1.jpg" alt="Seyyid Atabek" id="gridimage">
-        <h3>Seyyid Atabek</h3>
+        <img src="player5.jpg" alt="Baraka Koffi" id="gridimage">
+        <h3>Baraka Koffi</h3>
         <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
       </div>
     </div>
     <div class="column">
       <div class="content">
-      <img src="player2.jpg" alt="Kabelo Byron" id="gridimage">
-        <h3>Kabelo Byron</h3>
+      <img src="player6.jpg" alt="Presley Tionge" id="gridimage">
+        <h3>Presley Tionge</h3>
         <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
       </div>
     </div>
     <div class="column">
       <div class="content">
-      <img src="player3.jpg" alt="Lorne Odhiambo" id="gridimage" >
-        <h3>Lorne Odhiambo</h3>
+      <img src="player7.jpg" alt="Gadisa Sterling" id="gridimage" >
+        <h3>Gadisa Sterling</h3>
         <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
       </div>
     </div>
     <div class="column">
       <div class="content">
-      <img src="/w3images/mountains.jpg" alt="Mountains" id="gridimage">
-        <h3>My Work</h3>
+      <img src="player8.jpg" alt="Reuben Meredith" id="gridimage">
+        <h3>Reuben Meredith</h3>
         <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
       </div>
     </div>
