--- a/players.html
+++ b/players.html
@@ -54,7 +54,7 @@
   </div>
 
   <hr>
-
+  <H2>Midfield</H2>
   <div class="row">
     <div class="column">
       <div class="content">
@@ -85,6 +85,7 @@
       </div>
     </div>
   </div>
+</div>
 
 
 </body>
