added new row and football description

--- a/players.html
+++ b/players.html
@@ -85,7 +85,33 @@
       </div>
     </div>
   </div>
+  <hr>
+  <H2>Defence</H2>
+  <div class="row">
+    <div class="column">
+      <div class="content">
+        <img src="player9.jpg" alt="Baraka Koffi" id="gridimage">
+        <h3>Baraka Koffi</h3>
+        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      </div>
+    </div>
+    <div class="column">
+      <div class="content">
+      <img src="player10.jpg" alt="Presley Tionge" id="gridimage">
+        <h3>Presley Tionge</h3>
+        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      </div>
+    </div>
+    <div class="column">
+      <div class="content">
+      <img src="player11.jpg" alt="Gadisa Sterling" id="gridimage" >
+        <h3>Gadisa Sterling</h3>
+        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      </div>
+    </div>
+  </div>
 </div>
+
 
 
 </body>
