--- a/index.html
+++ b/index.html
@@ -11,14 +11,21 @@
             <a href="players.html">Meet the team</a> 
             
         </div>
+        <div class="title">
+          <h1>Westlake football </h1>
+        </div>
         <div class="home">
-            <h1>Westlake football </h1>
+            
             <div class="row">
                 <div class="column">
                   <div class="content">
-                    <h3>What is football</h3>
-                    <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
-                    <img src="player1.jpg" alt="Seyyid Atabek" id="gridimage">
+                    <h3>What is football</h3>   
+                    <p>football, is a captivating game played by two teams, each consisting 
+                      of eleven players. The objective is to maneuver a ball into the opposing 
+                      team’s goal using any part of the body except the hands and arms. The only 
+                      exception is the goalkeeper, who is allowed to handle the ball but only 
+                      within the penalty area surrounding the goal.</p>
+                    <img src="footballkidjpg.jpg" alt="kid kicking " id="gridimage">
                   </div>
                 </div>
                 <div class="column">
