--- a/players.html
+++ b/players.html
@@ -25,9 +25,15 @@
   <div class="row">
     <div class="column">
       <div class="content">
-        <img src="player1.jpg" alt="Seyyid Atabek" id="gridimage">
+        <img src="player1.jpg" alt="Baraka Koffi" id="gridimage">
         <h3>Seyyid Atabek</h3>
-        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+        <p>Baraka Koffi is a striker whose name resonates with power and finesse on the football pitch.
+           Known for his explosive speed and sharp shooting skills, Koffi has an uncanny ability to 
+           find the back of the net. His physical presence and aerial prowess make him a constant 
+           threat during set-pieces, while his quick feet allow him to navigate through tight 
+           defenses. Off the field, Koffi’s charismatic personality and leadership qualities 
+           inspire his team, making him not just a goal-scorer but a true talisman for his club.
+          </p>
       </div>
     </div>
     <div class="column">
@@ -58,9 +64,15 @@
   <div class="row">
     <div class="column">
       <div class="content">
-        <img src="player5.jpg" alt="Baraka Koffi" id="gridimage">
+        <img src="player5.jpg" alt="Seyyid Atabek" id="gridimage">
         <h3>Baraka Koffi</h3>
-        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+        <p>Seyyid Atabek, a dynamic football player known for his agility and precision on the field,
+           has made a name for himself as a formidable midfielder. With a keen eye for goal 
+           opportunities and a talent for threading through defenses, Atabek’s playmaking 
+           abilities have become essential to his team’s offensive strategies. His dedication 
+           to the sport is evident in his tireless work ethic, both in training and during
+            matches, making him a respected figure among teammates and a favorite among fans.
+          </p>
       </div>
     </div>
     <div class="column">
