added decriptions for  mid and upperfeild

--- a/players.html
+++ b/players.html
@@ -19,7 +19,7 @@
   <hr>
   
  <!-- <h2>PORTFOLIO</h2> -->
-  <h2>strikers</h2>
+  <h2>Strikers</h2>
   
   <!-- Portfolio Gallery Grid -->
   <div class="row">
@@ -40,21 +40,39 @@
       <div class="content">
       <img src="player2.jpg" alt="Kabelo Byron" id="gridimage">
         <h3>Kabelo Byron</h3>
-        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+        <p>Kabelo Byron is a striker whose name is synonymous with scoring goals. His lightning-fast 
+          reflexes and clinical finishing make him a constant threat in the opposition’s box. Byron’s
+          ability to find space where none seems to exist, coupled with his powerful shot, has earned 
+          him a reputation as a prolific goal-scorer. Off the pitch, his focus and determination to
+          improve his craft are as striking as his performance on the field, making him a standout 
+          forward and a fan favorite.
+        </p>
       </div>
     </div>
     <div class="column">
       <div class="content">
       <img src="player3.jpg" alt="Lorne Odhiambo" id="gridimage">
         <h3>Lorne Odhiambo</h3>
-        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+        <p>Lorne Odhiambo is a striker known for his remarkable agility and precision in front of the goal.
+          His ability to outmaneuver defenders and his sharp instincts for finding the back of the net make 
+          him a formidable presence on the attack. Odhiambo’s dedication to perfecting his technique is 
+          evident in his powerful strikes and clever movement, making him a crucial asset to his team’s 
+          offensive lineup. Off the field, his commitment to excellence and his passion for the game 
+          inspire both teammates and young fans alike.
+        </p>
       </div>
     </div>
     <div class="column">
       <div class="content">
       <img src="player4.jpg" alt="Lucas Claud" id="gridimage">
         <h3>Lucas Claud</h3>
-        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+        <p>
+          Lucas Claud is a striker whose game is characterized by his sharp shooting skills and an unerring
+          ability to find the net. His quick footwork and intelligent positioning allow him to break through
+          defensive lines with ease. Claud’s impressive goal-scoring record is a testament to his predatory 
+          instincts inside the penalty area. Off the pitch, his professionalism and dedication to training 
+          set a high standard for aspiring footballers.
+        </p>
       </div>
     </div>
   </div>
@@ -65,7 +83,7 @@
     <div class="column">
       <div class="content">
         <img src="player5.jpg" alt="Seyyid Atabek" id="gridimage">
-        <h3>Baraka Koffi</h3>
+        <h3>Seyyid Atabek</h3>
         <p>Seyyid Atabek, a dynamic football player known for his agility and precision on the field,
            has made a name for himself as a formidable midfielder. With a keen eye for goal 
            opportunities and a talent for threading through defenses, Atabek’s playmaking 
@@ -79,21 +97,40 @@
       <div class="content">
       <img src="player6.jpg" alt="Presley Tionge" id="gridimage">
         <h3>Presley Tionge</h3>
-        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+        <p>Presley Tionge, a dynamic midfielder, is celebrated for his exceptional ball control
+           and vision on the pitch. His strategic positioning and ability to orchestrate plays
+            from the center of the park make him an invaluable asset to his team. Tionge’s
+            tireless work rate and precision passing contribute to his reputation as a
+            playmaker who can turn the tide of a game. Off the field, his leadership qualities 
+            and commitment to the sport are just as impressive, marking him as a true midfield maestro.
+          </p>
       </div>
     </div>
     <div class="column">
       <div class="content">
       <img src="player7.jpg" alt="Gadisa Sterling" id="gridimage" >
         <h3>Gadisa Sterling</h3>
-        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+        <p>Gadisa Sterling, a dynamic midfielder known for his agility and vision on the field, commands 
+          the central area with a blend of tactical intelligence and relentless energy. His ability to 
+          read the game and distribute the ball effectively makes him an invaluable asset to his team’s 
+          offensive and defensive strategies. Sterling’s knack for timely interceptions and precise 
+          passing continually disrupts the opposition’s plans, while his leadership qualities inspire 
+          his teammates to elevate their performance.
+        </p>
       </div>
     </div>
     <div class="column">
       <div class="content">
       <img src="player8.jpg" alt="Reuben Meredith" id="gridimage">
         <h3>Reuben Meredith</h3>
-        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+        <p>
+          Reuben Meredith is a tenacious midfielder whose exceptional ball control and strategic 
+          playmaking abilities make him a standout on the pitch. With a keen eye for creating scoring 
+          opportunities, Meredith excels at threading through passes that slice through defenses. 
+          His tireless work rate and commitment to the game are evident in every match, as he 
+          consistently positions himself to support both the attack and defense, showcasing his 
+          versatility and dedication as a central figure in his team’s success
+        </p>
       </div>
     </div>
   </div>
