--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
                 <div class="column">
                   <div class="content">
                     <h2 id="grid">What is Football</h2 >   
-                    <p>football, is a captivating game played by two teams, each consisting 
+                    <p>Football, is a captivating game played by two teams, each consisting 
                       of eleven players. The objective is to maneuver a ball into the opposing 
                       team’s goal using any part of the body except the hands and arms. The only 
                       exception is the goalkeeper, who is allowed to handle the ball but only 
-                      within the penalty area surrounding the goal.</p>
+                      within the penalty area surrounding the goal.
+                    </p>
                     <img src="footballkidjpg.jpg" alt="kid kicking " id="gridimage">
                   </div>
                 </div>
