--- a/players.html
+++ b/players.html
@@ -40,12 +40,12 @@
       <div class="content">
       <img src="player2.jpg" alt="Kabelo Byron" id="gridimage">
         <h3>Kabelo Byron</h3>
-        <p>Kabelo Byron is a striker whose name is synonymous with scoring goals. His lightning-fast 
-          reflexes and clinical finishing make him a constant threat in the opposition’s box. Byron’s
-          ability to find space where none seems to exist, coupled with his powerful shot, has earned 
-          him a reputation as a prolific goal-scorer. Off the pitch, his focus and determination to
-          improve his craft are as striking as his performance on the field, making him a standout 
-          forward and a fan favorite.
+        <p>Kabelo Byron is an electrifying striker whose speed and agility leave defenders in his wake.
+           Known for his sharp movements and keen sense of goal, Byron's ability to convert half-chances
+            into goals is unmatched. His acrobatic finishes and aerial prowess make him a constant aerial
+             threat, while his passion and drive on the field rally his team and intimidate opponents.
+              Byron's striking talent is not just in his feet; it's in his anticipation and the fear he 
+              instills in the heart of the defense every time he's on the ball.
         </p>
       </div>
     </div>
@@ -53,12 +53,12 @@
       <div class="content">
       <img src="player3.jpg" alt="Lorne Odhiambo" id="gridimage">
         <h3>Lorne Odhiambo</h3>
-        <p>Lorne Odhiambo is a striker known for his remarkable agility and precision in front of the goal.
-          His ability to outmaneuver defenders and his sharp instincts for finding the back of the net make 
-          him a formidable presence on the attack. Odhiambo’s dedication to perfecting his technique is 
-          evident in his powerful strikes and clever movement, making him a crucial asset to his team’s 
-          offensive lineup. Off the field, his commitment to excellence and his passion for the game 
-          inspire both teammates and young fans alike.
+        <p>Lorne Odhiambo is a dynamic striker known for his agility and precision in front of the goal.
+           With a keen eye for finding the back of the net, Odhiambo possesses a rare blend of speed and
+           technical skill, allowing him to outmaneuver defenders and finish with finesse. His ability 
+           to read the game and make intelligent runs makes him a constant threat in the attacking third,
+           and his tireless work ethic is an inspiration to his teammates. Whether it’s a crucial league
+           match or a high-stakes tournament game, Odhiambo’s presence on the pitch is a game-changer.
         </p>
       </div>
     </div>
@@ -67,11 +67,12 @@
       <img src="player4.jpg" alt="Lucas Claud" id="gridimage">
         <h3>Lucas Claud</h3>
         <p>
-          Lucas Claud is a striker whose game is characterized by his sharp shooting skills and an unerring
-          ability to find the net. His quick footwork and intelligent positioning allow him to break through
-          defensive lines with ease. Claud’s impressive goal-scoring record is a testament to his predatory 
-          instincts inside the penalty area. Off the pitch, his professionalism and dedication to training 
-          set a high standard for aspiring footballers.
+          Lucas Claud is a formidable striker whose name is synonymous with clinical finishing and 
+          relentless energy on the football field. His exceptional positioning and sharp instincts 
+          allow him to exploit gaps in any defense, making him a pivotal figure in his team’s offensive
+          lineup. Claud’s impressive footwork and deft ball control enable him to navigate through tight
+          spaces, while his powerful shots are a testament to his striking prowess. Off the pitch, his
+          leadership and passion for the game inspire both fans and fellow players alike.
         </p>
       </div>
     </div>
@@ -110,12 +111,12 @@
       <div class="content">
       <img src="player7.jpg" alt="Gadisa Sterling" id="gridimage" >
         <h3>Gadisa Sterling</h3>
-        <p>Gadisa Sterling, a dynamic midfielder known for his agility and vision on the field, commands 
-          the central area with a blend of tactical intelligence and relentless energy. His ability to 
-          read the game and distribute the ball effectively makes him an invaluable asset to his team’s 
-          offensive and defensive strategies. Sterling’s knack for timely interceptions and precise 
-          passing continually disrupts the opposition’s plans, while his leadership qualities inspire 
-          his teammates to elevate their performance.
+        <p>Gadisa Sterling is a midfield virtuoso, renowned for his exceptional ball control and 
+          strategic playmaking. His ability to dictate the tempo of the game and deliver pinpoint 
+          passes makes him a key playmaker for his team. Sterling’s agility and technical finesse 
+          enable him to weave through opponents, while his defensive acumen ensures he’s a formidable 
+          presence in both halves of the pitch. His dedication to the sport and his team is evident in 
+          every match, as he consistently performs with both skill and heart.
         </p>
       </div>
     </div>
@@ -139,28 +140,45 @@
   <div class="row">
     <div class="column">
       <div class="content">
-        <img src="player9.jpg" alt="Baraka Koffi" id="gridimage">
-        <h3>Baraka Koffi</h3>
-        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+        <img src="player9.jpg" alt="George Koffi" id="gridimage">
+        <h3>George Koffi</h3>
+        <p>George Koffi is a stalwart defender, renowned for his robust tackling and aerial dominance.
+           His exceptional reading of the game and positional sense allow him to thwart opposing attacks
+           with ease. Koffi’s strength and composure under pressure make him a reliable last line of defense,
+           and his ability to launch the ball upfield initiates crucial counterattacks. Off the field,  
+           his leadership and dedication to the sport are as solid as his commitment to his team’s success.
+          </p>
       </div>
     </div>
     <div class="column">
       <div class="content">
       <img src="player10.jpg" alt="Presley Tionge" id="gridimage">
         <h3>Presley Tionge</h3>
-        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+        <p>Presley Tionge, originally described as a midfield maestro, adapts his skills seamlessly to the
+           defensive line. His tactical acumen and game-reading abilities translate into formidable defending, 
+           where he excels at breaking down attacks and maintaining composure under pressure. Tionge’s 
+           versatility allows him to switch from orchestrating plays to safeguarding his team’s backline, 
+           showcasing his all-around prowess on the football field. His leadership and dedication remain 
+           unwavering, whether he’s controlling the midfield or anchoring the defense.
+        </p>
       </div>
     </div>
     <div class="column">
       <div class="content">
       <img src="player11.jpg" alt="Gadisa Sterling" id="gridimage" >
         <h3>Gadisa Sterling</h3>
-        <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+        <p>Gadisa Sterling, previously a midfield virtuoso, transitions into a defensive role with remarkable 
+          ease. His superb ball control and strategic mindset serve him well in dispossessing attackers and 
+          maintaining possession under pressure. Sterling’s agility and finesse are now utilized in tight 
+          defensive situations, allowing him to execute precise tackles and clearances. His playmaking skills 
+          are not lost in defense; instead, they’re transformed into launching counterattacks from the backline. 
+          His unwavering dedication and tactical intelligence make him a versatile and formidable defender on the 
+          pitch.
+        </p>
       </div>
     </div>
   </div>
 </div>
-
 
 
 </body>
