--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="sport.css">
+<link rel="stylesheet" href="gallery.css">
 
 </head>
 <body style="background-color:white;">
@@ -10,7 +10,8 @@
 <div class="navbar">
   <img id="logo" src="logobg.png" alt="logo">
   <a href="index.html">Home</a>
-  <a href="players.html">Meet the team</a>
+  <a href="gallery.html">Meet the team</a>
+  <a href="https://www.worldfootball.net/">football news</a>
 </div> 
 
 <div class="main">
