--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="home.css">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <div class="navbar">
             <img id="logo" src="logobg.png" alt="logo">
             <a href="#">Home</a> 
-            <a href="players.html">Meet the team</a> 
+            <a href="gallery.html">Meet the team</a> 
+            <a href="https://www.worldfootball.net/">football news</a>
+            <a href="https:/www.instagram.com/wbhs_football">instagram</a>
             
         </div>
         <div class="title">
@@ -38,7 +40,7 @@
                 <div class="column">
                   <div class="content">
                   <img src="player3.jpg" alt="Lorne Odhiambo" id="gridimage">
-                    <h3>Lorne Odhiambo</h3>
+                    <h3>we made it to the world football news</h3>
                     <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
                   </div>
                 </div>
