--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,8 @@
   <img id="logo" src="logobg.png" alt="logo">
   <a href="index.html">Home</a>
   <a href="gallery.html">Meet the team</a>
-  <a href="https://www.worldfootball.net/">football news</a>
+  <a href="https://www.worldfootball.net/">Football news</a>
+  <a href="https:/www.instagram.com/wbhs_football">Instagram</a>
 </div> 
 
 <div class="main">
