--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
             <img id="logo" src="logobg.png" alt="logo">
             <a href="#">Home</a> 
             <a href="gallery.html">Meet the team</a> 
-            <a href="https://www.worldfootball.net/">football news</a>
-            <a href="https:/www.instagram.com/wbhs_football">instagram</a>
+            <a href="https://www.worldfootball.net/">Football news</a>
+            <a href="https:/www.instagram.com/wbhs_football">Instagram</a>
             
         </div>
         <div class="title">
@@ -34,14 +34,40 @@
                 <div class="column">
                   <div class="content">
                     <h3>Meet our mascot</h3>
-                  <img src="big buck bunny.jpg" alt="Kabelo Byron" id="gridimage">
+                    <p>As the Westlake football team mascot, I am a swan, a symbol of grace and unity.
+                       My elegant white plumage and strong wings reflect the team’s pursuit of excellence
+                        and the soaring spirit of competition. Gliding smoothly across waters, I embody
+                         the strategy and poise of the Westlake team on the field, representing the beauty
+                          and strength inherent in our emblematic bird.
+                    </p>
+                  <img src="swan-2.gif" alt="Kabelo Byron" id="gridimage">
                   </div>
                 </div>
                 <div class="column">
                   <div class="content">
                   <img src="player3.jpg" alt="Lorne Odhiambo" id="gridimage">
-                    <h3>we made it to the world football news</h3>
-                    <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+                    <h3>Lorne Odhiambo made it to the world football news</h3>
+                    <p> <b>Odhiambo: Westlake’s Prodigy Striker</b> <BR>
+                      At Westlake, a star is born, and his name is Lorne Odhiambo. 
+                      This striker has been making significant strides on the football pitch,
+                      captivating fans with his exceptional talent and goal-scoring prowess.
+                      Odhiambo’s affiliation with Westlake football has been a match made in 
+                      heaven. His remarkable ability to navigate through defenses and his knack
+                      for scoring have made him a key player for the team. His recent performances
+                     have not only contributed to Westlake’s victories but have also solidified
+                      his status as a fan favorite. In a recent match that had everyone on the edge
+                      of their seats, Odhiambo delivered an unforgettable performance. He scored 
+                      a hat-trick that propelled Westlake to a dominant win. His first goal was 
+                      a masterclass in dribbling, as he left defenders trailing before slotting 
+                     the ball home. The second goal was a powerful header from a corner, showcasing 
+                      his aerial threat. The third, a clever finish from a tight angle, demonstrated 
+                      his versatility as a striker. Beyond the field, Odhiambo is known for his leadership 
+                      qualities and his dedication to community engagement. He often participates in 
+                      local events and supports initiatives aimed at promoting sports among youth.
+                      As Westlake looks forward to the rest of the season, the spotlight firmly 
+                      remains on Lorne Odhiambo. With his current form, he is not just a player to 
+                      watch but also an inspiration to aspiring footballers everywhere. Lorne Odhiambo 
+                      is indeed a name that will echo in Westlake’s history for many seasons to come.</p>
                   </div>
                 </div>
               
